# openssl-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ccache.yaml  check.yaml  ci-mobile.yaml  ci.yaml  codeql.yaml  detect.yaml  test-rebuild.yaml
apps/: CMakeLists.txt  main.cpp
cmake/: CheckSourceHash.cmake  ConfigureOpenSSL.cmake  DetectTargetPlatform.cmake  FetchOpenSSL.cmake  FindVcvarsall.cmake  GetCPM.cmake  Utils.cmake
cmake/preset/: android.json  base.json  ios.json  linux.json  macos.json  windows.json
cmake/toolchain/: ios.cmake  ios_sim.cmake
patch/: android.patch  ios.patch  ios_sim.patch
script/: create-xcframework.sh
